--- a/src/app/components/career-ui/career-ui.component.html
+++ b/src/app/components/career-ui/career-ui.component.html
@@ -18,7 +18,7 @@
                    <h6>Location</h6>
                    <h5>Chennai, India</h5>
                    <div class="button only-mobile">
-                      <div class="btn btn-white"><img src="./assets/images/left-arrow.svg"> Back</div>
+                      <div class="btn btn-white " routerLink="/careers"><img src="./assets/images/left-arrow.svg"> Back</div>
                    </div>
                 </div>
                 <div class="col-md-7 description">
