--- a/src/app/components/career-ui/career-ui.component.scss
+++ b/src/app/components/career-ui/career-ui.component.scss
@@ -92,6 +92,10 @@
                 border-radius: 0px;
                 border-color: #8B8B8F;
             }
+            .btn-white:focus{
+                border-color: #ced4da;
+                box-shadow: none;
+              }
             .description{
                 h6{
                     font-size: 24px;
