--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -38,13 +38,13 @@
                               <div class="col-md-5">
                                  <div class="form-group bg-light">
                                     <label class="label" for="email">Email </label>
-                                    <input type="email" class="form-control" formControlName="phone" name="email" id="email" placeholder=" Your@email.com">
+                                    <input type="email" class="form-control" formControlName="email" name="email" id="email" placeholder=" Your@email.com">
                                  </div>
                               </div>
                               <div class="col-md-5">
                                  <div class="form-group bg-light">
                                     <label class="label" for="name">Phone</label>
-                                    <input type="text" class="form-control" formControlName="email" name="number" id="number" placeholder=" Your phone number">
+                                    <input type="text" class="form-control" formControlName="phone" name="number" id="number" placeholder=" Your phone number">
                                  </div>
                               </div>
                               <div class="col-md-5">
