--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -14,7 +14,7 @@
              <hr>
              <div class="row designer ">
                 <div class="col-md-5">
-                   <h1>UI Designer</h1>
+                   <h1 routerLink="/career-ui">UI Designer</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
                    <h6>Experience <br>2 to 4 years</h6>
@@ -26,7 +26,7 @@
              <hr>
              <div class="row designer">
                 <div class="col-md-5">
-                   <h1>Ux Designer</h1>
+                   <h1 routerLink="/career-ux">UX Designer</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
                    <h6>Experience <br>5 to 10 years</h6>
