--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -21,7 +21,7 @@
             color: #FF424B;
         }
     }
-    /*.feature-work{
+    .feature-work{
         .row{
             margin-right: 0;
             margin-left: 0;
@@ -87,8 +87,7 @@
                 background-color: #FF424B;
             }
         }
-    }*/
-    
+    }
     .products{
         background-color: #FF424B;
         padding: 40px 0;
@@ -295,91 +294,36 @@
         }
     }
 }
+.ngucarousel-indicator-two{
+    text-align: center;
+    width: 100%;
+    padding-bottom: 80px;
+    padding-top: 40px;
+    padding-left: 0px;
+    li{
+        display: inline-block;
+        line-height: 22px;
+        a{
+            display: block;
+            margin: 0 5px;
+            width: 15px;
+            height: 15px;
+            border: 2px solid #FFF;
+            background-color: #D0D0D0 !important;
+            text-indent: -999px;
+            overflow: hidden;
+            border-radius: 10px;
+            cursor: pointer;
+            &.active{
+                width: 11px;
+                height: 11px;
+                border: 8px solid #FF424B;
+                background-color: #FF424B !important;
+            }
+        }
+    }
+}
 ::ng-deep .tile{
     border-radius: 15px;
     box-shadow: none !important;
-}
-
-
-.feature-work{
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-        margin-right: -15px;
-        margin-left: -30px;
-    }
-   .left{
-        border: none;
-        padding: 100px 170px 100px 100px;
-        height: 600px;
-        h3{
-            font-size: 28px;
-            font-weight: 700;
-            color: #707070;
-            margin-bottom: 45px;
-        }
-        h2{
-            font-size: 48px;
-            font-weight: 700;
-            margin-bottom: 40px;
-        }
-        h4{
-            font-size: 20px;
-            font-weight: 400;
-            color: #707070;
-            margin-bottom: 60px;
-        }
-        .btn{
-            background-color: #FF424B;
-            border-radius: 0;
-            color: #FFF;
-            cursor: pointer;
-            font-size: 20px;
-            font-weight: 400;
-            img{
-                padding-left: 12px;
-            }
-        }
-    
-   }
-   .right{
-        background-color: #3E4268;
-        text-align: center;
-        padding: 80px 0px;
-        margin-bottom: -12px;
-        img{
-            width: auto;
-            height: 100%;
-        }
-    }
-    .ngucarousel-indicator{
-        // text-align: center;
-        width: 100%;
-        padding-bottom: 0px;
-        padding-top: 0px;
-        padding-left: 40px;
-        margin-top: -40px;
-        li{
-            display: inline-block;
-            line-height: 22px;
-            a{
-                display: block;
-                margin: 0 5px;
-                width: 15px;
-                height: 15px;
-                border: 2px solid #FFF;
-                background-color: #D0D0D0 !important;
-                text-indent: -999px;
-                overflow: hidden;
-                border-radius: 10px;
-                cursor: pointer;
-                &.active{
-                    width: 11px;
-                    height: 11px;
-                    border: 8px solid #FF424B;
-                    background-color: #FF424B !important;
-                }
-            }
-        }
-    }
 }
