--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -12,7 +12,7 @@
         background-size: cover;
         position: relative;
         height: 770px;
-        background-color: #FF424B;
+        background-color: #C3343C;
     .design{
         padding: 300px 30px;
         h1{
@@ -54,7 +54,7 @@
 .about-layout{  
         h2{
             font-size: 48px;
-            color: #FF424B;
+            color: #C3343C;
         }
         h6{
             font-size: 24px;
@@ -76,7 +76,7 @@
                 }
             }
             .btn-white{
-                background-color: #FF424B;
+                background-color: #C3343C;
                 color: #FCFCFC;
                 font-size: 20px;
                 padding: 15px;
@@ -135,7 +135,7 @@
                         }
                     }
                     .btn-white{
-                        background-color: #FF424B;
+                        background-color: #C3343C;
                         color: #FCFCFC;
                         font-size: 16px;
                         padding: 10px;
@@ -240,7 +240,7 @@
                     }
                 }
                 .btn-white{
-                    background-color: #FF424B;
+                    background-color: #C3343C;
                     color: #FCFCFC;
                     font-size: 20px;
                     padding: 15px;
@@ -362,7 +362,7 @@
     }
 
 .about-layout2{
-        background-color: #FF424B;
+        background-color: #C3343C;
             .design{
                 padding: 150px 30px;
                 h2{
@@ -382,7 +382,7 @@
                 }
                 .btn-white{
                     background-color: #FCFCFC;
-                    color: #FF424B;
+                    color: #C3343C;
                     font-size: 20px;
                     padding: 15px;
                     border-radius: 0px;
