--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -16,7 +16,7 @@
         }
         h1{
             font-size: 56px;
-            color: #FF424B;
+            color: #C3343C;
             span{
                 color: #000000;
             }
@@ -26,7 +26,7 @@
             color: #282829;
             padding-top: 25px;
             span{
-                color: #FF424B;
+                color: #C3343C;
                 text-decoration: underline;
             }
         }
