--- a/src/app/components/career-ui/career-ui.component.scss
+++ b/src/app/components/career-ui/career-ui.component.scss
@@ -115,7 +115,7 @@
                     }
                 }
                 .btn-white{
-                    background-color: #FF424B;
+                    background-color: #C3343C;
                     color: #FCFCFC;
                     font-size: 20px;
                     padding: 15px;
