--- a/src/app/components/career-ux/career-ux.component.scss
+++ b/src/app/components/career-ux/career-ux.component.scss
@@ -107,7 +107,7 @@
                 }
                 h2{
                     font-size: 36px;
-                    color: #FF424B;
+                    color: #C3343C;
                 }
                 .checkbox {
                     display: block;
@@ -136,7 +136,7 @@
                     }
                 }
                 .btn-white{
-                    background-color: #FF424B;
+                    background-color: #C3343C;
                     color: #FCFCFC;
                     font-size: 20px;
                     padding: 15px;
@@ -164,8 +164,8 @@
                 }
                 .custom-control-input:checked ~ .custom-control-label::before{
                     color: #fff;
-                    border-color: #FF424B;
-                    background-color: #FF424B;
+                    border-color: #C3343C;
+                    background-color: #C3343C;
                 }
                 .custom-control-label::after{
                     top: 0px;
@@ -225,8 +225,8 @@
                     }
                     .custom-control-input:checked ~ .custom-control-label::before{
                         color: #fff;
-                        border-color: #FF424B;
-                        background-color: #FF424B;
+                        border-color: #C3343C;
+                        background-color: #C3343C;
                     }
                     .custom-control-label::after{
                         top: 0px;
