--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -17,10 +17,10 @@
                    <h1 routerLink="/career-ui">UI Designer</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
-                   <h6>Experience <br>2 to 4 years</h6>
+                   <h6>Experience <div>2 to 4 years</div></h6>
                 </div>
                 <div class="col-md-4 only-mobile">
-                   <h6>Location<br>chennai, India</h6>
+                   <h6>Location<div>Chennai, India</div></h6>
                 </div>
              </div>
              <hr>
@@ -29,10 +29,10 @@
                    <h1 routerLink="/career-ux">UX Designer</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
-                   <h6>Experience <br>5 to 10 years</h6>
+                   <h6>Experience <div>5 to 10 years</div></h6>
                 </div>
                 <div class="col-md-4 only-mobile">
-                   <h6>Location<br>chennai, India</h6>
+                   <h6>Location<div>Chennai, India</div></h6>
                 </div>
              </div>
              <hr>
