--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -52,6 +52,7 @@
             </div>
         </div>
     </div>
+ 
     <div class="service-layout3">
         <div class="container">
             <div class="d-flex">
@@ -136,6 +137,50 @@
               </div>
         </div>
     </div>
+    <div class="process-layout">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-9">
+               <h2>Process of our Usability Testing</h2>
+            </div>
+            <div class="col-md-3"></div>
+         </div>
+         <div class="layout">
+         <div class="flex">
+            <div class="process">
+              <p>1. Task planning</p>
+            </div>
+            <div class="process-right">
+             <p>2. Recruit Users</p>
+            </div>
+            <div class="process-right">
+              <p>3. Test Execution</p>
+            </div>
+            <div class="process-right">
+               <p>4. Analysis</p>
+            </div>
+            <div class="process-right">
+              <p>5. Test Report</p>
+            </div>
+            <div class="process-right">
+              <p>6. Recommendations</p>
+            </div>
+         </div>
+        </div>
+         <div class="flex only-mobile">
+          <ol>
+            <li>Task planning</li>
+            <li>Recruit Users</li>
+            <li>Test Execution</li>
+            <li>Analysis</li>
+            <li>Test Report</li>
+            <li>Recommendations</li>
+          </ol>
+        
+       </div>
+         </div>
+       
+      </div>
     <div class="service-layout3-responsive">
       <ngb-accordion [closeOthers]="true" activeIds="static-1">
         <ngb-panel id="static-1"  >  
