--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -64,7 +64,7 @@
         margin-right: 0px !important;
     }
     .left-layout{
-       background-color: #FF424B;
+       background-color: #C3343C;
        color: #FFFFFF;
        padding: 285px 0px;
        h3{
@@ -223,14 +223,14 @@
             background-color: #FFFFFF !important;
         }
         .btn-link:hover {
-            color: #FF424B;
+            color: #C3343C;
             font-size: 20px;
         
         }
         .btn-link {
             font-size: 20px;
             font-weight: 700; 
-            color: #FF424B;
+            color: #C3343C;
             text-decoration: none;
             width: 100%;
         }
@@ -268,7 +268,7 @@
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
     background-color: #FCFCFC;
-    color: #FF424B;
+    color: #C3343C;
     font-size: 36px;
     font-weight: 600;
     svg{
