--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -18,7 +18,7 @@
         color: #000000;
 
         span{
-            color: #FF424B;
+            color: #C3343C;
         }
     }
     h6{ 
@@ -26,7 +26,7 @@
         padding-top: 25px;
         color: #1f0b0c;
          span{
-            color: #FF424B;
+            color: #C3343C;
             text-decoration: underline;
             
         }
@@ -103,7 +103,7 @@
         }
         h2{
             font-size: 36px;
-            color: #FF424B;
+            color: #C3343C;
         }
         .checkbox {
             display: block;
@@ -131,7 +131,7 @@
             }
         }
         .btn-white{
-            background-color: #FF424B;
+            background-color: #C3343C;
             color: #FCFCFC;
             font-size: 20px;
             padding: 15px;
@@ -192,7 +192,7 @@
             padding: 100px 20px;
 
             .layouts{
-                height: 1700px;
+                height: 1400px;
                 overflow: hidden;
             }
             ::-webkit-scrollbar {
@@ -307,8 +307,8 @@ p{
 }
 .custom-control-input:checked ~ .custom-control-label::before{
     color: #fff;
-    border-color: #FF424B;
-    background-color: #FF424B;
+    border-color: #C3343C;
+    background-color: #C3343C;
 }
 .custom-control-label::after{
     top: 0px;
