--- a/src/app/components/engagement-models/engagement-models.component.html
+++ b/src/app/components/engagement-models/engagement-models.component.html
@@ -8,7 +8,77 @@
     </div>
  </div>
 </div>
- <div class="engagement-layout1">
+<div class="feature-work">
+   <ngu-carousel class="work-carousel" #workCarousel [inputs]="worksCarouselConfig" [dataSource]="works">
+      <ngu-tile *nguCarouselDef="let item; let i = index">
+         <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                  <h2>{{ item.title }}</h2>
+                    <p>{{ item.sub }}</p>
+                </div>
+            </div>
+            <div class="col-md-6 design-right">
+               <div class="row logo-image">
+                  <div class="col-md-2">
+                     <div class="logo-images">
+                        <img [src]="item.img">
+                     </div>
+                  </div>
+                  <div class="col-md-8">
+                     <div class="logo-images">
+                        <p>{{ item.subject }}</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="row logo-image">
+                  <div class="col-md-2">
+                     <div class="logo-images">
+                        <img [src]="item.imge">
+                     </div>
+                  </div>
+                  <div class="col-md-8">
+                     <div class="logo-images">
+                        <p>{{ item.subjects }}</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="row logo-image">
+                  <div class="col-md-2">
+                     <div class="logo-images">
+                        <img [src]="item.imges">
+                     </div>
+                  </div>
+                  <div class="col-md-8">
+                     <div class="logo-images">
+                        <p>{{ item.cost }}</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="row logo-image">
+                  <div class="col-md-2">
+                     <div class="logo-images">
+                        <img [src]="item.logo">
+                     </div>
+                  </div>
+                  <div class="col-md-8">
+                     <div class="logo-images">
+                        <p>{{ item.definition }}</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+        </div>
+      </ngu-tile>
+      <ul class="ngucarousel-indicator-two" NguCarouselPoint>
+         <li *ngFor="let pointer of workCarousel.pointNumbers; let i = index">
+            <a (click)="workCarousel.moveTo(i)" [class.active]="workCarousel.activePoint == i">&nbsp;</a>
+         </li>
+      </ul>
+      </ngu-carousel>
+ </div>
+
+<!--<div class="engagement-layout1">
     <div class="container">
       <div [ngbNavOutlet]="nav"></div>
        <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
@@ -236,7 +306,7 @@
           </li>
        </ul>
       </div>
-    </div>
+    </div>-->
 
     <ngb-accordion [closeOthers]="true" activeIds="static-1" class="only-mobile">
       <ngb-panel id="static-1"  >  
