--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -16,7 +16,7 @@
             color: #000000;
 
             span{
-                color: #FF424B;
+                color: #C3343C;
             }
         }
     }
@@ -49,7 +49,7 @@
 .layout{
   
     .five{
-        background-color: #FF424B;
+        background-color: #C3343C;
         color: #FCFCFC;
         padding: 100px 100px;
             h1{
@@ -166,7 +166,7 @@
         }
         .btn-white{
             background-color: #FCFCFC;
-            color: #FF424B;
+            color: #C3343C;
             font-size: 20px;
             padding: 15px;
             border-radius: 0px;
@@ -225,7 +225,7 @@
 }
 
 .design-layout1{
-    background-color: #FF6C6C;
+    background-color: #C3343C;
     position: relative;
     color: #FFFFFF;
     padding-top: 150px;
@@ -249,7 +249,7 @@
         }
         .btn-white{
             background-color: #FCFCFC;
-            color: #FF424B;
+            color: #C3343C;
             font-size: 20px;
             padding: 15px;
             border-radius: 0px;
@@ -333,7 +333,7 @@
         }
         .btn-white{
             background-color: #FCFCFC;
-            color: #FF424B;
+            color: #C3343C;
             font-size: 20px;
             padding: 15px;
             border-radius: 0px;
