--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
@@ -147,7 +147,7 @@ h6{
         }
        .left{
            padding: 40px 130px 80px 90px;
-           background-color: #FF424B;
+           background-color: #C3343C;
            h2{
                font-weight: 400;
                color: #FFF;
@@ -157,7 +157,7 @@ h6{
            .btn{
                background-color: #FFF;
                border-radius: 0;
-               color: #FF424B;
+               color: #C3343C;
                cursor: pointer;
                font-size: 20px;
                font-weight: 400;
@@ -213,8 +213,8 @@ h6{
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #FF424B;
-                background-color: #FF424B !important;
+                border: 8px solid #C3343C;
+                background-color: #C3343C !important;
             }
         }
     }
