--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             <h4>For a quick response</h4>
             <ul class="contact">
                 <li>
-                    <a href="mailto:enquire@uxmint.in">hello@uxmint.design</a>
+                    <a href="mailto:enquire@uxmint.in">hello@uxmint.in</a>
                 </li>
                 <li>
                     <a href="tel:+91 9884053886">+91 9884053886</a>
