--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -14,10 +14,10 @@
              <hr>
              <div class="row designer ">
                 <div class="col-md-5">
-                   <h1 routerLink="/career-ui">UI Designer</h1>
+                   <h1 routerLink="/career/ui/job-description">UI Designer</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
-                   <h6>Experience <br>2 to 4 years</h6>
+                   <h6>Experience <br>3 years</h6>
                 </div>
                 <div class="col-md-4 only-mobile">
                    <h6>Location<br>chennai, India</h6>
@@ -26,10 +26,10 @@
              <hr>
              <div class="row designer">
                 <div class="col-md-5">
-                   <h1 routerLink="/career-ux">UX Designer</h1>
+                   <h1 routerLink="/career/ux/job-description">Graphic Design</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
-                   <h6>Experience <br>5 to 10 years</h6>
+                   <h6>Experience <br>3 to 6 years</h6>
                 </div>
                 <div class="col-md-4 only-mobile">
                    <h6>Location<br>chennai, India</h6>
