--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -52,135 +52,112 @@
             </div>
         </div>
     </div>
- 
-    <div class="service-layout3">
-        <div class="container">
-            <div class="d-flex">
-                <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
-                  <li ngbNavItem="discussion">
-                    <a ngbNavLink>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                            <g id="Group_5738" data-name="Group 5738" transform="translate(-399.5 -1878.381)">
-                              <path id="Path_9457" data-name="Path 9457"
-                                d="M4734.6,11462.1v6.411l-7.87,13.03s-2.536,3.909,2.438,4.559c.148-.036,15.9,0,15.9,0s5.038.092,2.592-4.559c.075.031-8.112-13.03-8.112-13.03v-6.411"
-                                transform="translate(-4325.584 -9583)" fill="none" stroke="currentColor" stroke-width="2"></path>
-                              <path id="Path_9458" data-name="Path 9458" d="M0,0H7.908" transform="translate(407.54 1879.381)"
-                                fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"></path>
-                              <line id="Line_99" data-name="Line 99" x2="14.784" transform="translate(404.02 1894.166)" fill="none"
-                                stroke="currentColor" stroke-linecap="round" stroke-width="2"></line>
-                            </g>
-                          </svg>
-                        Controlled</a>
-                    <ng-template ngbNavContent>
-                      <h2>Controlled Environment Testing</h2>
-                      <p>A controlled environment testing session is moderated in person or remotely by a trained researcher; who walks through the tasks to participants, answers their queries, and asks follow-up questions. Conversely, an uncontrolled test is done without direct supervision; participants might be in a lab, but it's more likely they are in their own homes and/or using their own devices to browse the website that is being tested. But they can also be unobtrusively monitored by the researcher.</p>
-                    </ng-template>
-                  </li>
-                  <li ngbNavItem="discovery">
-                    <a ngbNavLink>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                            <g id="Group_5739" data-name="Group 5739" transform="translate(-616 -1861)">
-                              <g id="Icon_feather-compass" data-name="Icon feather-compass" transform="translate(617 1862)">
-                                <path id="Path_9459" data-name="Path 9459" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
-                                  transform="translate(-3 -3)" fill="none" stroke="currentColor" stroke-linecap="round"
-                                  stroke-linejoin="round" stroke-width="2"></path>
-                                <path id="Path_9460" data-name="Path 9460" d="M20.12,11.64,18,18l-6.36,2.12,2.12-6.36Z"
-                                  transform="translate(-3.88 -3.88)" fill="none" stroke="currentColor" stroke-linecap="round"
-                                  stroke-linejoin="round" stroke-width="2"></path>
-                              </g>
-                            </g>
-                          </svg>
-                        Exploratory</a>
-                    <ng-template ngbNavContent>
-                    <h2>Exploratory Testing</h2>
-                      <p>Researchers or Participants can browse through the website or application without any pre-planned tasks. The aim of the testing is mostly to uncover maximum usability issues with minimal time. This type of testing typically can be done in the early stages of product development and helps researchers pinpoint gaps in the market, identify potential new features, and workshop new ideas.</p>
-                    </ng-template>
-                  </li>
-                  <li ngbNavItem="solution">
-                    <a ngbNavLink>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                            <g id="Icon_feather-globe" data-name="Icon feather-globe" transform="translate(-2 -2)">
-                              <path id="Path_9461" data-name="Path 9461" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
-                                transform="translate(0 0)" fill="none" stroke="currentColor" stroke-linecap="round"
-                                stroke-linejoin="round" stroke-width="2"></path>
-                              <path id="Path_9462" data-name="Path 9462" d="M3,18H27" transform="translate(0 -3)" fill="none"
-                                stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
-                              <path id="Path_9463" data-name="Path 9463"
-                                d="M16,3a20.486,20.486,0,0,1,4,12,20.486,20.486,0,0,1-4,12,20.486,20.486,0,0,1-4-12A20.486,20.486,0,0,1,16,3Z"
-                                transform="translate(-1)" fill="none" stroke="currentColor" stroke-linecap="round"
-                                stroke-linejoin="round" stroke-width="2"></path>
-                            </g>
-                          </svg>
-                        Remote</a>
-                    <ng-template ngbNavContent>
-                      <h2>Remote Testing</h2>
-                      <p>As the name suggest participants can be geographically in any location but would be instructed by trained researchers to brief them on the tasks to be performed and they are observed and analyzed based on their body language and facial expressions and follow-up questions.</p>
-                    </ng-template>
-                  </li>
-                  <li ngbNavItem="test">
-                    <a ngbNavLink>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                            <path id="Icon_material-location-on" data-name="Icon material-location-on"
-                              d="M15.9,3a8.394,8.394,0,0,0-8.4,8.4c0,6.3,8.4,15.6,8.4,15.6s8.4-9.3,8.4-15.6A8.394,8.394,0,0,0,15.9,3Zm0,11.4a3,3,0,1,1,3-3A3,3,0,0,1,15.9,14.4Z"
-                              transform="translate(-6.5 -2)" fill="none" stroke="currentColor" stroke-linecap="round"
-                              stroke-linejoin="round" stroke-width="2"></path>
-                          </svg>
-                        Contextual</a>
-                    <ng-template ngbNavContent>
-                        <h2>Contextual Testing</h2>
-                        <p>Contextual testing is a semi-informal method to obtain information about the context of use, where users are first asked a set of standard questions and then observed and questioned while they use the website or application in their own environments. This method suits when an existing application needs revamp or enhancement to collect maximum possible data for the existing users.</p>
-                    </ng-template>
-                  </li>
-                </ul>
-              
-                <div [ngbNavOutlet]="nav" class="ml-4 px-5"></div>
-              </div>
-        </div>
-    </div>
-    <div class="process-layout">
+    <div class="situations-layout">
       <div class="container">
-         <div class="row">
-            <div class="col-md-9">
-               <h2>Process of our Usability Testing</h2>
-            </div>
-            <div class="col-md-3"></div>
-         </div>
-         <div class="layout">
-         <div class="flex">
-            <div class="process">
-              <p>1. Task planning</p>
-            </div>
-            <div class="process-right">
-             <p>2. Recruit Users</p>
-            </div>
-            <div class="process-right">
-              <p>3. Test Execution</p>
-            </div>
-            <div class="process-right">
-               <p>4. Analysis</p>
-            </div>
-            <div class="process-right">
-              <p>5. Test Report</p>
-            </div>
-            <div class="process-right">
-              <p>6. Recommendations</p>
-            </div>
-         </div>
+        <div class="row">
+          <div class="col-md-6">
+  <h2>Situations where usability testing will be of great use</h2>
+          </div>
+          <div class="col-md-6">
+            <div [ngbNavOutlet]="nav"></div>
+            <ul ngbNav #nav="ngbNav" class="">
+              <li ngbNavItem>
+                <a ngbNavLink> <svg xmlns="http://www.w3.org/2000/svg" width="16.546" height="17.825" viewBox="0 0 16.546 17.825"> <g id="Group_5633" data-name="Group 5633" transform="translate(15.131 1) rotate(90)"> <path id="Path_9437" data-name="Path 9437" d="M-11443.52,11612.816h-15.825l6.716,6.716" transform="translate(11459.345 -11605.815)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> <path id="Path_9438" data-name="Path 9438" d="M-11459.344,11615.815l3-3" transform="translate(11463.06 -11612.814)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> </g> </svg></a>
+                <ng-template ngbNavContent>To get an understanding of users mental model</ng-template>
+              </li>
+              <li ngbNavItem>
+                <a ngbNavLink> <svg xmlns="http://www.w3.org/2000/svg" width="16.546" height="17.825" viewBox="0 0 16.546 17.825"> <g id="Group_5633" data-name="Group 5633" transform="translate(15.131 1) rotate(90)"> <path id="Path_9437" data-name="Path 9437" d="M-11459.344,11612.816h15.825l-6.716,6.716" transform="translate(11459.344 -11605.815)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> <path id="Path_9438" data-name="Path 9438" d="M-11456.344,11615.815l-3-3" transform="translate(11468.453 -11612.814)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> </g> </svg></a>
+                <ng-template ngbNavContent>Not sure which option of design will be beneficial</ng-template>
+              </li>
+            </ul>
+          </div>
         </div>
-         <div class="flex only-mobile">
-          <ol>
-            <li>Task planning</li>
-            <li>Recruit Users</li>
-            <li>Test Execution</li>
-            <li>Analysis</li>
-            <li>Test Report</li>
-            <li>Recommendations</li>
-          </ol>
-        
-       </div>
-         </div>
-       
       </div>
+    </div>
+    <div class="service-layout3">
+      <div class="container">
+          <div class="d-flex">
+              <ul ngbNav #nav2="ngbNav" [(activeId)]="active2" class="nav-pills" orientation="vertical">
+                <li ngbNavItem="discussion">
+                  <a ngbNavLink>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                          <g id="Group_5738" data-name="Group 5738" transform="translate(-399.5 -1878.381)">
+                            <path id="Path_9457" data-name="Path 9457"
+                              d="M4734.6,11462.1v6.411l-7.87,13.03s-2.536,3.909,2.438,4.559c.148-.036,15.9,0,15.9,0s5.038.092,2.592-4.559c.075.031-8.112-13.03-8.112-13.03v-6.411"
+                              transform="translate(-4325.584 -9583)" fill="none" stroke="currentColor" stroke-width="2"></path>
+                            <path id="Path_9458" data-name="Path 9458" d="M0,0H7.908" transform="translate(407.54 1879.381)"
+                              fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"></path>
+                            <line id="Line_99" data-name="Line 99" x2="14.784" transform="translate(404.02 1894.166)" fill="none"
+                              stroke="currentColor" stroke-linecap="round" stroke-width="2"></line>
+                          </g>
+                        </svg>
+                      Controlled</a>
+                  <ng-template ngbNavContent>
+                    <h2>Controlled Environment Testing</h2>
+                    <p>A controlled environment testing session is moderated in person or remotely by a trained researcher; who walks through the tasks to participants, answers their queries, and asks follow-up questions. Conversely, an uncontrolled test is done without direct supervision; participants might be in a lab, but it's more likely they are in their own homes and/or using their own devices to browse the website that is being tested. But they can also be unobtrusively monitored by the researcher.</p>
+                  </ng-template>
+                </li>
+                <li ngbNavItem="discovery">
+                  <a ngbNavLink>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                          <g id="Group_5739" data-name="Group 5739" transform="translate(-616 -1861)">
+                            <g id="Icon_feather-compass" data-name="Icon feather-compass" transform="translate(617 1862)">
+                              <path id="Path_9459" data-name="Path 9459" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
+                                transform="translate(-3 -3)" fill="none" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" stroke-width="2"></path>
+                              <path id="Path_9460" data-name="Path 9460" d="M20.12,11.64,18,18l-6.36,2.12,2.12-6.36Z"
+                                transform="translate(-3.88 -3.88)" fill="none" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" stroke-width="2"></path>
+                            </g>
+                          </g>
+                        </svg>
+                      Exploratory</a>
+                  <ng-template ngbNavContent>
+                  <h2>Exploratory Testing</h2>
+                    <p>Researchers or Participants can browse through the website or application without any pre-planned tasks. The aim of the testing is mostly to uncover maximum usability issues with minimal time. This type of testing typically can be done in the early stages of product development and helps researchers pinpoint gaps in the market, identify potential new features, and workshop new ideas.</p>
+                  </ng-template>
+                </li>
+                <li ngbNavItem="solution">
+                  <a ngbNavLink>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                          <g id="Icon_feather-globe" data-name="Icon feather-globe" transform="translate(-2 -2)">
+                            <path id="Path_9461" data-name="Path 9461" d="M27,15A12,12,0,1,1,15,3,12,12,0,0,1,27,15Z"
+                              transform="translate(0 0)" fill="none" stroke="currentColor" stroke-linecap="round"
+                              stroke-linejoin="round" stroke-width="2"></path>
+                            <path id="Path_9462" data-name="Path 9462" d="M3,18H27" transform="translate(0 -3)" fill="none"
+                              stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                            <path id="Path_9463" data-name="Path 9463"
+                              d="M16,3a20.486,20.486,0,0,1,4,12,20.486,20.486,0,0,1-4,12,20.486,20.486,0,0,1-4-12A20.486,20.486,0,0,1,16,3Z"
+                              transform="translate(-1)" fill="none" stroke="currentColor" stroke-linecap="round"
+                              stroke-linejoin="round" stroke-width="2"></path>
+                          </g>
+                        </svg>
+                      Remote</a>
+                  <ng-template ngbNavContent>
+                    <h2>Remote Testing</h2>
+                    <p>As the name suggest participants can be geographically in any location but would be instructed by trained researchers to brief them on the tasks to be performed and they are observed and analyzed based on their body language and facial expressions and follow-up questions.</p>
+                  </ng-template>
+                </li>
+                <li ngbNavItem="test">
+                  <a ngbNavLink>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                          <path id="Icon_material-location-on" data-name="Icon material-location-on"
+                            d="M15.9,3a8.394,8.394,0,0,0-8.4,8.4c0,6.3,8.4,15.6,8.4,15.6s8.4-9.3,8.4-15.6A8.394,8.394,0,0,0,15.9,3Zm0,11.4a3,3,0,1,1,3-3A3,3,0,0,1,15.9,14.4Z"
+                            transform="translate(-6.5 -2)" fill="none" stroke="currentColor" stroke-linecap="round"
+                            stroke-linejoin="round" stroke-width="2"></path>
+                        </svg>
+                      Contextual</a>
+                  <ng-template ngbNavContent>
+                      <h2>Contextual Testing</h2>
+                      <p>Contextual testing is a semi-informal method to obtain information about the context of use, where users are first asked a set of standard questions and then observed and questioned while they use the website or application in their own environments. This method suits when an existing application needs revamp or enhancement to collect maximum possible data for the existing users.</p>
+                  </ng-template>
+                </li>
+              </ul>
+            
+              <div [ngbNavOutlet]="nav2" class="ml-4 px-5"></div>
+          </div>
+      </div>
+  </div>
     <div class="service-layout3-responsive">
       <ngb-accordion [closeOthers]="true" activeIds="static-1">
         <ngb-panel id="static-1"  >  
@@ -245,4 +222,48 @@
          </ngb-panel>
       </ngb-accordion>
     </div>
+    <div class="process-layout">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-9">
+               <h2>Process of our Usability Testing</h2>
+            </div>
+            <div class="col-md-3"></div>
+         </div>
+         <div class="layout">
+         <div class="flex">
+            <div class="process">
+              <p>1. Task planning</p>
+            </div>
+            <div class="process-right">
+             <p>2. Recruit Users</p>
+            </div>
+            <div class="process-right">
+              <p>3. Test Execution</p>
+            </div>
+            <div class="process-right">
+               <p>4. Analysis</p>
+            </div>
+            <div class="process-right">
+              <p>5. Test Report</p>
+            </div>
+            <div class="process-right">
+              <p>6. Recommendations</p>
+            </div>
+         </div>
+        </div>
+         <div class="flex only-mobile">
+          <ol>
+            <li>Task planning</li>
+            <li>Recruit Users</li>
+            <li>Test Execution</li>
+            <li>Analysis</li>
+            <li>Test Report</li>
+            <li>Recommendations</li>
+          </ol>
+        
+       </div>
+         </div>
+       
+      </div>
 </div>
