--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -18,7 +18,7 @@
         h1{
             font-size: 72px;
             font-weight: 700;
-            color: #FF424B;
+            color: #C3343C;
         }
     }
     .feature-work{
@@ -48,7 +48,7 @@
                 margin-bottom: 60px;
             }
             .btn{
-                background-color: #FF424B;
+                background-color: #C3343C;
                 border-radius: 0;
                 color: #FFF;
                 cursor: pointer;
@@ -84,12 +84,12 @@
                 background-color: #E6E6E6;
             }
             .nav-link.active{
-                background-color: #FF424B;
+                background-color: #C3343C;
             }
         }
     }
     .products{
-        background-color: #FF424B;
+        background-color: #C3343C;
         padding: 40px 0;
         color: #FFF;
         h2{
@@ -107,7 +107,7 @@
         }
         .btn{
             background-color: #FFF;
-            color: #FF424B;
+            color: #C3343C;
             border-radius: 0;
             cursor: pointer;
             font-size: 20px;
@@ -185,7 +185,7 @@
             margin-bottom: 60px;
         }
         .btn{
-            background-color: #FF424B;
+            background-color: #C3343C;
             border-radius: 0;
             color: #FFF;
             cursor: pointer;
@@ -219,7 +219,7 @@
         }
        .left{
            padding: 40px 130px 80px 90px;
-           background-color: #FF424B;
+           background-color: #C3343C;
            h2{
                font-size: 48px;
                font-weight: 500;
@@ -230,7 +230,7 @@
            .btn{
                background-color: #FFF;
                border-radius: 0;
-               color: #FF424B;
+               color: #C3343C;
                cursor: pointer;
                font-size: 20px;
                font-weight: 400;
@@ -288,8 +288,8 @@
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #FF424B;
-                background-color: #FF424B !important;
+                border: 8px solid #C3343C;
+                background-color: #C3343C !important;
             }
         }
     }
@@ -317,8 +317,8 @@
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #FF424B;
-                background-color: #FF424B !important;
+                border: 8px solid #C3343C;
+                background-color: #C3343C !important;
             }
         }
     }
