--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -17,10 +17,10 @@
                    <h1 routerLink="/career/ui/job-description">UI Designer</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
-                   <h6>Experience <br>3 years</h6>
+                   <h6>Experience </h6> <h6>3 years</h6>
                 </div>
                 <div class="col-md-4 only-mobile">
-                   <h6>Location<div>Chennai, India</div></h6>
+                   <h6>Location</h6><h6>Chennai, India</h6>
                 </div>
              </div>
              <hr>
@@ -29,10 +29,10 @@
                    <h1 routerLink="/career/ux/job-description">Graphic Design</h1>
                 </div>
                 <div class="col-md-3 only-mobile">
-                   <h6>Experience <br>3 to 6 years</h6>
+                   <h6>Experience</h6> <h6>3 to 6 years</h6>
                 </div>
                 <div class="col-md-4 only-mobile">
-                   <h6>Location<div>Chennai, India</div></h6>
+                   <h6>Location</h6><h6>Chennai, India</h6>
                 </div>
              </div>
              <hr>
