--- a/src/app/components/career/career.component.scss
+++ b/src/app/components/career/career.component.scss
@@ -79,6 +79,7 @@
                 font-size: 20px;
                 color: #282829;
                 padding-top: 5px;
+                font-weight: 400;
             }
             }
 
